[package]
	authors = ["Ian Pratt <ianjdpratt@gmail.com>"]
	edition = "2021"
	name    = "lths_cybersecurity_diy_cipher"
	version = "0.0.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	clap = { version = "^4.5.0", features = ["derive"] }
