[package]
	authors = ["Ian Pratt <ianjdpratt@gmail.com>"]
	edition = "2021"
	name    = "lths_cybersecurity_diy_cipher"
	version = "0.1.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
	blake3 = "1.5.0"
	clap   = { version = "^4.5.0", features = ["derive"] }

[dev-dependencies]
	rand = "0.8.5"
